# ai-stock

./: .gitignore  LICENSE  PRODUCT_ROADMAP.md  README.md  start-dev.ps1  stop-dev.ps1  todo.md
.claude/: settings.local.json
backend/: .env.example  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  test_network.py
backend/data/: ai_stock.db
backend/database/: __init__.py  models.py
backend/services/: __init__.py  ai_analyzer.py  akshare_service.py  backtest_service.py  quant_service.py  scheduler_service.py  stock_data.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: BottomNav.css  BottomNav.jsx  ThemeToggle.css  ThemeToggle.jsx
frontend/src/contexts/: ThemeContext.jsx
frontend/src/pages/: AIBacktest.css  AIBacktest.jsx  AIChat.css  AIChat.jsx  Favorites.css  Favorites.jsx  Recommendations.css  Recommendations.jsx  StockAnalysis.css  StockAnalysis.jsx
frontend/src/services/: api.js  favorites.js
