[project]
name = "ai-stock-backend"
version = "1.0.0"
description = "AI炒股后端服务 - A股实时数据与智能分析"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "akshare-one>=0.1.0",
    "pandas>=2.0.0",
]

